# paperback-toolchain-rs

./: .gitmodules  Cargo.toml  README.md  package-lock.json
src/: main.rs
src/bundler/: mod.rs
src/bundler/bundler_programs/: esbuild_bundler.rs  esbuildrs_bundler.rs  mako_bundler.rs  mod.rs  rolldown_bundler.rs  rspack_bundler.rs  swc_bundler.rs
src/migrator/: mod.rs
src/util/caching/: mod.rs
