[package]
name = "paperback-toolchain-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
#anyhow = "1.0.86"
clap = "4.5.20"
colored = "2.1.0"
indicatif = "0.17.8"
oxc = { version = "0.34.0", features=["codegen", "minifier", "serialize"] }
sonic-rs = "0.3.14"
#rolldown = { path = "external/rolldown/crates/rolldown" }
rolldown = { workspace = true }
tokio = { version = "1.41.0", features = ["full"] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
sugar_path = { version = "1.2.0", features = ["cached_current_dir"] }
#xshell = "0.2.6"
#esbuild-rs = "0.13.8"
#futures = "0.3.30"
#async-std = "1.12.0"
## rspack_core = { git = "https://github.com/web-infra-dev/rspack", tag = "v1.0.0-rc.1"}
## mako = { git = "https://github.com/umijs/mako.git", tag = "v0.8.4" }
#swc = "0.284.1"
#swc_bundler = "0.236.0"
#swc_common = { version = "0.37.4", features = ["tty-emitter"] }
#swc_ecma_ast = "0.118.2"
#swc_ecma_codegen = "0.155.0"
#swc_ecma_loader = "0.49.1"
#swc_ecma_parser = "0.149.0"

[workspace]
lints = {  }
members = [
    "external/rolldown/crates/rolldown",
    "external/rolldown/crates/rolldown_common",
]

[workspace.package]
edition = "2021"
homepage = ""
license = ""
repository = ""

# rolldown workspace deps
[workspace.dependencies]
css-module-lexer                        = "0.0.14"
rolldown                                = { version = "0.1.0", path = "external/rolldown/crates/rolldown" }
rolldown_common                         = { version = "0.1.0", path = "external/rolldown/crates/rolldown_common", features = ["serde"] }
rolldown_ecmascript                     = { version = "0.1.0", path = "external/rolldown/crates/rolldown_ecmascript" }
rolldown_error                          = { version = "0.1.0", path = "external/rolldown/crates/rolldown_error" }
rolldown_fs                             = { version = "0.1.0", path = "external/rolldown/crates/rolldown_fs" }
rolldown_loader_utils                   = { version = "0.1.0", path = "external/rolldown/crates/rolldown_loader_utils" }
rolldown_plugin                         = { version = "0.1.0", path = "external/rolldown/crates/rolldown_plugin" }
rolldown_plugin_alias                   = { version = "0.1.0", path = "external/rolldown/crates/rolldown_plugin_alias/" }
rolldown_plugin_build_import_analysis   = { version = "0.1.0", path = "external/rolldown/crates/rolldown_plugin_build_import_analysis" }
rolldown_plugin_data_url                = { version = "0.1.0", path = "external/rolldown/crates/rolldown_plugin_data_url" }
rolldown_plugin_dynamic_import_vars     = { version = "0.0.1", path = "external/rolldown/crates/rolldown_plugin_dynamic_import_vars" }
rolldown_plugin_import_glob             = { version = "0.1.0", path = "external/rolldown/crates/rolldown_plugin_import_glob" }
rolldown_plugin_json                    = { version = "0.1.0", path = "external/rolldown/crates/rolldown_plugin_json" }
rolldown_plugin_load_fallback           = { version = "0.1.0", path = "external/rolldown/crates/rolldown_plugin_load_fallback" }
rolldown_plugin_manifest                = { version = "0.1.0", path = "external/rolldown/crates/rolldown_plugin_manifest" }
rolldown_plugin_module_preload_polyfill = { version = "0.1.0", path = "external/rolldown/crates/rolldown_plugin_module_preload_polyfill" }
rolldown_plugin_replace                 = { version = "0.1.0", path = "external/rolldown/crates/rolldown_plugin_replace" }
rolldown_plugin_transform               = { version = "0.1.0", path = "external/rolldown/crates/rolldown_plugin_transform" }
rolldown_plugin_wasm_fallback           = { version = "0.1.0", path = "external/rolldown/crates/rolldown_plugin_wasm_fallback" }
rolldown_plugin_wasm_helper             = { version = "0.1.0", path = "external/rolldown/crates/rolldown_plugin_wasm_helper" }
rolldown_resolver                       = { version = "0.1.0", path = "external/rolldown/crates/rolldown_resolver" }
rolldown_rstr                           = { version = "0.1.0", path = "external/rolldown/crates/rolldown_rstr" }
rolldown_sourcemap                      = { version = "0.1.0", path = "external/rolldown/crates/rolldown_sourcemap" }
rolldown_std_utils                      = { version = "0.1.0", path = "external/rolldown/crates/rolldown_std_utils" }
rolldown_testing                        = { version = "0.1.0", path = "external/rolldown/crates/rolldown_testing" }
rolldown_testing_config                 = { version = "0.1.0", path = "external/rolldown/crates/rolldown_testing_config" }
rolldown_tracing                        = { version = "0.1.0", path = "external/rolldown/crates/rolldown_tracing" }
rolldown_utils                          = { version = "0.1.0", path = "external/rolldown/crates/rolldown_utils" }

anyhow              = "1.0.86"
append-only-vec     = { version = "0.1.5" }
arcstr              = "1.2.0"
ariadne             = "0.4.1"
async-channel       = "2.3.1"
async-scoped        = { version = "0.9.0" }
async-trait         = "0.1.80"
base64-simd         = "0.8.0"
bitflags            = { version = "2.6.0" }
daachorse           = "1.0.0"
dashmap             = "6.0.0"
derivative          = "2.2.0"
dunce               = "1.0.4"                                                                           # Normalize Windows paths to the most compatible format, avoiding UNC where possible
futures             = "0.3.30"
glob                = "0.3.1"
glob-match          = "0.2.1"
indexmap            = "2.2.6"
infer               = "0.16.0"
insta               = "1.39.0"
itertools           = "0.13.0"
itoa                = "1.0.11"
json-strip-comments = "1.0.4"
jsonschema          = { version = "0.26.0", default-features = false }
lightningcss        = { version = "1.0.0-alpha.57" }
memchr              = "2.7.2"
mimalloc            = "0.1.42"
mime                = "0.3.17"
napi                = { version = "3.0.0-alpha.16", features = ["async", "anyhow"] }
napi-build          = { version = "2.1.3" }
napi-derive         = { version = "3.0.0-alpha.15", default-features = false, features = ["type-def"] }
notify              = { version = "7.0.0" }
oxc_resolver        = { version = "2.0.0" }
phf                 = "0.11.2"
rayon               = "1.10.0"
regex               = "1.10.5"
regress             = "0.10.0"
rustc-hash          = "2.0.0"
schemars            = "0.8.21"
self_cell           = "1.0.4"
serde               = { version = "1.0.203", features = ["derive"] }
serde_json          = "1.0.117"
simdutf8            = { version = "0.1.4", features = ["aarch64_neon"] }
smallvec            = "1.13.2"
string_wizard       = "0.0.22"
sugar_path          = { version = "1.2.0", features = ["cached_current_dir"] }
testing_macros      = "1.0.0"
tokio               = { version = "1.38.0", default-features = false }
tracing             = "0.1.40"
tracing-chrome      = "0.7.2"
tracing-subscriber  = { version = "0.3.18", default-features = false }
typedmap            = "0.5.0"
urlencoding         = "2.1.3"
vfs                 = "0.12.0"
xxhash-rust         = "0.8.10"

# oxc crates share the same version
oxc                = { version = "0.34.0", features = ["sourcemap_concurrent", "transformer", "minifier", "semantic", "codegen"] }
oxc_index          = { version = "0.34.0", features = ["rayon"] }
oxc_transform_napi = { version = "0.34.0" }

[features]
drop-in = []

[[bin]]
name = "paperback"
path = "src/main.rs"
required-features = ["drop-in"]

[[bin]]
name = "pbtc"
path = "src/main.rs"
required-features = []
